# Tesis

./: .bashrc  .vimrc  README.md  _vimrc
camaras_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
camaras_ws/devel/lib/camaras/: camaras_node
camaras_ws/devel/lib/pkgconfig/: camaras.pc
camaras_ws/devel/share/camaras/cmake/: camarasConfig.cmake
camaras_ws/src/camaras/: CMakeLists.txt
camaras_ws/src/camaras/launch/: view_both_cameras.launch  view_cameras_merged.launch
camaras_ws/src/camaras/src/: .main.cpp.swp  main.cpp  main_both_cameras_images.cpp  main_merged.cpp  main_origin.cpp  tcamcamera.cpp
rmo_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
rmo_ws/devel/include/my_robot_controller/: TramaDatos.h
rmo_ws/devel/lib/camaras/: camaras_node
rmo_ws/devel/lib/my_robot_controller/: robot_info_suscriber  robot_uart_control
rmo_ws/devel/lib/pkgconfig/: camaras.pc  my_robot_controller.pc
rmo_ws/devel/lib/python3/dist-packages/my_robot_controller/msg/: _TramaDatos.py  __init__.py
rmo_ws/devel/share/camaras/cmake/: camarasConfig.cmake
rmo_ws/devel/share/common-lisp/ros/my_robot_controller/msg/: TramaDatos.lisp  _package.lisp  _package_TramaDatos.lisp  my_robot_controller-msg.asd
rmo_ws/devel/share/gennodejs/ros/my_robot_controller/msg/: TramaDatos.js  _index.js
rmo_ws/devel/share/my_robot_controller/cmake/: my_robot_controller-msg-extras.cmake  my_robot_controller-msg-paths.cmake  my_robot_controllerConfig.cmake
rmo_ws/devel/share/roseus/ros/my_robot_controller/: manifest.l
rmo_ws/devel/share/roseus/ros/my_robot_controller/msg/: TramaDatos.l
rmo_ws/src/camaras/: CMakeLists.txt  package.xml
rmo_ws/src/camaras/launch/: view_both_cameras.launch
rmo_ws/src/camaras/src/: main.cpp
rmo_ws/src/my_robot_controller/: CMakeLists.txt  package.xml
rmo_ws/src/my_robot_controller/msg/: TramaDatos.msg
rmo_ws/src/my_robot_controller/scripts/: draw_circle.py  joystick_control.py  joystick_control_uart.py  my_first_node.py
rmo_ws/src/my_robot_controller/scripts/backup/: juan_joystick_control_uart.py  uri_joystick_control_uart.py
rmo_ws/src/my_robot_controller/src/: robot_info_suscriber.cpp  robot_uart_control.cpp  robot_uart_control_funcionando.cpp
